// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> renders 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 5,
        },
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "minHeight": 44,
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {color} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 5,
        },
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "minHeight": 44,
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 5,
        },
        Object {
          "backgroundColor": "#F5F5F6",
          "color": "#e0e0e0",
        },
        false,
        false,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={false}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "minHeight": 44,
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 5,
        },
        false,
        false,
        Object {
          "borderColor": "#d33c44",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "minHeight": 44,
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../components/Icon/assets/error.png",
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "height": 20,
            "width": 20,
          },
          Object {
            "height": 20,
            "marginHorizontal": 5,
            "width": 20,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`<Input> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 5,
        },
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "minHeight": 44,
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={2}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontSize": 12,
          "lineHeight": 16,
        },
        Object {
          "color": "#707070",
        },
        Object {
          "marginTop": 4,
          "maxWidth": "100%",
          "paddingLeft": 10,
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`<Input> when {icon} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 5,
        },
        false,
        false,
        undefined,
      ]
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../components/Icon/assets/email.png",
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "height": 20,
            "width": 20,
          },
          Object {
            "height": 20,
            "marginHorizontal": 5,
            "width": 20,
          },
          undefined,
        ]
      }
    />
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "minHeight": 44,
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {keyboard} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 5,
        },
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="numeric"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "minHeight": 44,
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 14,
          "fontWeight": "600",
          "lineHeight": 16,
        },
        Object {
          "color": "#707070",
        },
        Object {
          "marginBottom": 6,
          "marginLeft": 10,
        },
      ]
    }
  >
    Hello World
  </Text>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 5,
        },
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "minHeight": 44,
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {lines} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 5,
        },
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={true}
      numberOfLines={5}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "minHeight": 44,
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {required} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 5,
        },
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "minHeight": 44,
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../components/Icon/assets/error_outline.png",
        }
      }
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "height": 20,
            "width": 20,
          },
          Object {
            "height": 20,
            "marginHorizontal": 5,
            "width": 20,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`<Input> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
        "width": 256,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 5,
        },
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "minHeight": 44,
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<Input> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 10,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderColor": "#e0e0e0",
          "borderRadius": 2.5,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "paddingHorizontal": 5,
        },
        false,
        false,
        undefined,
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#707070"
      style={
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontSize": 16,
          "fontWeight": "400",
          "minHeight": 44,
          "paddingHorizontal": 5,
          "paddingVertical": 7.5,
          "width": "100%",
        }
      }
      underlineColorAndroid="transparent"
      value="soyjavi"
    />
  </View>
</View>
`;
